# elastix

./: .gitignore  .gitmodules  CMakeDefaultCache.txt  CMakeLists.txt  README.md  elx_config.h.in  make_release
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_configs.txt
CMake/: SuperBuild.cmake
Common/: Instrumentor.hpp  itkMultiResolutionImageRegistrationMethod2.h  itkMultiResolutionImageRegistrationMethod2.hxx
Common/CostFunctions/: itkAdvancedImageToImageMetric.h  itkAdvancedImageToImageMetric.hxx
Common/ImageSamplers/: itkImageFullSampler.h  itkImageFullSampler.hxx  itkImageGridSampler.hxx  itkImageRandomCoordinateSampler.h  itkImageRandomCoordinateSampler.hxx  itkImageRandomSampler.h  itkImageRandomSampler.hxx  itkImageRandomSamplerBase.h  itkImageRandomSamplerBase.hxx  itkImageSamplerBase.h  itkImageSamplerBase.hxx  itkXoshiroRandomGenerators.hpp
Common/Transforms/: itkAdvancedBSplineDeformableTransformBase.h  itkAdvancedBSplineDeformableTransformBase.hxx  itkAdvancedTranslationTransform.h
Common/xout/: xoutmain.h
Components/: CMakeLists.txt
Components/Metrics/BendingEnergyPenaltyAnalytic/: CMakeLists.txt  elxTransformBendingEnergyPenaltyTermAnalytic.cxx  elxTransformBendingEnergyPenaltyTermAnalytic.h  elxTransformBendingEnergyPenaltyTermAnalytic.hxx  itkTransformBendingEnergyPenaltyTermAnalytic.h  itkTransformBendingEnergyPenaltyTermAnalytic.hxx
Components/Optimizers/MORVGOMEA/: CMakeLists.txt  elxMOGOMEA.cxx  elxMOGOMEA.h  elxMOGOMEA.hxx  itkMOGOMEAOptimizer.cxx  itkMOGOMEAOptimizer.h
Components/Optimizers/MORVGOMEA/util/: FOS.cxx  FOS.h  MO_optimization.cxx  MO_optimization.h  Optimization.h  Tools.cxx  Tools.h
Components/Optimizers/RVGOMEA/: CMakeLists.txt  elxGOMEA.cxx  elxGOMEA.h  elxGOMEA.hxx  itkGOMEAOptimizer.cxx  itkGOMEAOptimizer.h
Components/Optimizers/RVGOMEA/util/: FOS.cxx  FOS.h  Instrumentor.hpp  Tools.cxx  Tools.h
Core/: CMakeLists.txt
Core/ComponentBaseClasses/: elxImageSamplerBase.h  elxImageSamplerBase.hxx  elxMetricBase.h  elxMetricBase.hxx  elxOptimizerBase.hxx  elxRegistrationBase.h  elxRegistrationBase.hxx  elxTransformBase.h  elxTransformBase.hxx
Scenes/: AlternatingCubeSphere.cxx  CMakeLists.txt  EllipseSphereExample.cxx  SphereInCube.cxx
experiments/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  experiments.ipynb  massif.out.66691  params.txt  pirpinia_gomea.db  pyproject.toml  requirements.txt  testing.ipynb
experiments/elastix_wrapper/: __init__.py  parameters.py  threaded_generator.py  watchdog.py  wrapper.py
experiments/experiments/: __init__.py  convergence_tests.py  dataset.py  db.py  experiment.py  generate_experiments.py  parameters.py  pareto_front.py  run_experiments.py  run_local.py  run_queue.py  study.py  wandb_test.py  wrapper.py
experiments/notebooks/: bsplines.ipynb  colormap.py  landmarks.ipynb  plots.ipynb  points.txt  test.ipynb  tests.ipynb  voxels.ipynb  wandb_ds.py
experiments/notebooks/experiments/: baseline_bes.csv  baseline_rmses.csv  baseline_tres.csv  fair_comparison.ipynb  fair_comparison_mr.ipynb  final_fair.ipynb  fold_constraints.ipynb  gridsizes.ipynb  hybrid.ipynb  linkage_models.ipynb  missed_pixels.ipynb  pdpct.ipynb  regularization_weight.ipynb
experiments/resources/: base_params.json  instances.json  plt_custom.txt
experiments/src/: __init__.py  db.py  parameters.py  results.py  wrapper.py
experiments/tests/: test_experiments.py
experiments/thesispy/: colorline.py  definitions.py  plot_utils.py
experiments/thesispy/elastix_wrapper/: __init__.py  parameters.py  runner.py  watchdog.py  wrapper.py
experiments/thesispy/experiments/: dataset.py  experiment.py  generate_experiments.py  instance.py  run_json.py  run_local.py  run_queue.py  validation.py  visualization.py  wandb_client.py
run/: cbct.mha  ct.mha  params.txt  valgrind-out.txt
run/empire/: run  (+1 more)
shark/: batch_paretos  batch_runs  make_release  run_experiments  run_json  run_local  run_pareto  test  test_ids
tools/: plastimatch.patch
(+55 files in other folders)
