[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Joas Mulder <joasmulder@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
Pillow = "^9.0.1"
wandb = "^0.12.11"
python-dotenv = "^0.19.2"
redis = "^4.1.4"
sshtunnel = "^0.4.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"