[tool.poetry]
name = "thesispy"
version = "0.1.0"
description = ""
authors = ["Joas Mulder <joasmulder@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
Pillow = "^9.0.1"
python-dotenv = "^0.19.2"
redis = "^4.1.4"
sshtunnel = "^0.4.0"
wcwidth = "^0.2.5"
wandb = "^0.12.14"
scipy = "^1.8.0"
nibabel = "^3.2.2"
tqdm = "^4.64.1"
joblib = "^1.2.0"
SimpleITK = "^2.2.0"
seaborn = "^0.12.0"
matplotlib = "^3.5.1"
scikit-image = "^0.19.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
pandas = "^1.4.1"
ipykernel = "^6.11.0"
plotly = "^5.10.0"
SciencePlots = "^1.0.9"
ipywidgets = "^7.7.1"
numdifftools = "^0.9.40"
Cython = "^0.29.32"
dictquery = "^0.4.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"