
ADD_ELXCOMPONENT(MOGOMEA
    elxMOGOMEA.h
    elxMOGOMEA.hxx
    elxMOGOMEA.cxx
    itkMOGOMEAOptimizer.h
    itkMOGOMEAOptimizer.cxx
    util/FOS.h
    util/Tools.h
    util/FOS.cxx
    util/Tools.cxx
    util/Optimization.h
    util/MO_optimization.h
    util/MO_optimization.cxx
)

# target_link_libraries(MOGOMEA
#   mcheck
# )
